# newsolingo

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  test_integration.py
newsolingo/: __init__.py  __main__.py  cli.py  config.py  config_cli.py
newsolingo/exercise/: questions.py  reading.py
newsolingo/fetcher/: scraper.py  sources.py
newsolingo/languages/: registry.py
newsolingo/llm/: adaptor.py  assessor.py  client.py  prompts.py
newsolingo/review/: __init__.py  chat.py
newsolingo/storage/: __init__.py  database.py  models.py  progress.py  session_export.py
sources/: he.yaml  pt_br.yaml
